--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -9,5 +9,6 @@ ENV GO111MODULE=on
 RUN go get github.com/golangci/golangci-lint/cmd/golangci-lint \
     && go get golang.org/x/tools/cmd/goimports
 
-RUN CGO_ENABLED=0
+RUN go install github.com/swaggo/swag/cmd/swag@latest
 
+RUN CGO_ENABLED=0
