--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,7 +2,12 @@ FROM golang:1.16
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
         gettext-base \
+        npm \
     && rm -rf /var/lib/apt/lists/*
+
+RUN npm install -g migrate-mongo
+
+RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
 
 ENV GO111MODULE=on
 
